	be about seven times faster by avoiding reinitialization of the library).

	Don't force file list reload after `:!` and rely on change detection.
	This should result in somewhat better performance.  Thanks to opennota.

	Duplicate status bar error in dialog that reports sourcing error.  Will
	need to get rid of errors on status bar later.

	Fixed positioning cursor in directory :history when inside custom view.
	Thanks to filterfalse.

	Fixed compilation of modes/view.c when build is configured with
	`--disable-extended-keys`.  Thanks to Bearcat M. Şándor (a.k.a.
	bearcatsandor).

	Fixed crashes discovered via fuzzing, most of which require rather
	unusual kind of input.

	Fixed running commands with arguments on Windows when 'shell' isn't
	cmd.exe.

	Fixed ".." not being preserved in path loaded into custom view.  Thanks to
	filterfalse.

	Fixed directory size in statusline.  Patch by Dmitry Frank (a.k.a.
	dimonomid).

	Fixed extra width of inactive cursor in ls-like view when 'classify'
	contains Unicode characters.

	Fixed stopping of put operation after copying symbolic link that's broken
	on destination.  Thanks to filterfalse.

	Fixed formatting of root directory in custom view, it displayed too many
	slashes.  Thanks to filterfalse.

	Fixed not recording last visited directory on leaving custom view.  Thanks
	to filterfalse.

	Fixed displaying of wild menu popup when statusbar is more than single
	line in height.

	Fixed weird view scrolling after zO (hard to notice) and Ctrl-A/X.

	Fixed assertion failure on renaming files with Ctrl-A/Ctrl-X when cursor
	is positioned on certain file from the range.

	Fixed a "race" with file system when we could load outdated file list and
	thus miss some file system updates.

	Fixed hardware cursor blinking in view for interactive queries.

	Fixed handling Tab and Shift-Tab on search prompt as if they are command
	prompts.

	Fixed horrible flickering of multiline statusbar for interactive queries.
