@@ -176,7 +176,7 @@ int view_needs_cd(const view_t *view, const char path[]);
 void set_view_path(view_t *view, const char path[]);
 /* Retrieves size of the entry, possibly using cached or calculated value.
  * Returns the size. */
-uint64_t fentry_get_size(const dir_entry_t *entry);
+uint64_t fentry_get_size(const view_t *view, const dir_entry_t *entry);
 /* Loads pointer to the next selected entry in file list of the view.  *entry
  * should be NULL for the first call and result of previous call otherwise.
  * Returns zero when there is no more entries to supply, otherwise non-zero is
